--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "@types/node": "^22.5.4",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.1.5",
+    "postcss": "^8.5.1",
     "prettier": "^3.4.2",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.7.3"
   },
   "engines": {
